; ModuleID = '/home/carl/AnghaBench/git/compat/extr_stat.c_git_lstat.c'
source_filename = "/home/carl/AnghaBench/git/compat/extr_stat.c_git_lstat.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.stat = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @git_lstat(i8* %0, %struct.stat* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca %struct.stat*, align 8
  %5 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store %struct.stat* %1, %struct.stat** %4, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = load %struct.stat*, %struct.stat** %4, align 8
  %8 = call i32 @lstat(i8* %6, %struct.stat* %7)
  store i32 %8, i32* %5, align 4
  %9 = load i32, i32* %5, align 4
  %10 = icmp eq i32 %9, 0
  br i1 %10, label %11, label %18

11:                                               ; preds = %2
  %12 = load %struct.stat*, %struct.stat** %4, align 8
  %13 = getelementptr inbounds %struct.stat, %struct.stat* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @mode_native_to_git(i32 %14)
  %16 = load %struct.stat*, %struct.stat** %4, align 8
  %17 = getelementptr inbounds %struct.stat, %struct.stat* %16, i32 0, i32 0
  store i32 %15, i32* %17, align 4
  br label %18

18:                                               ; preds = %11, %2
  %19 = load i32, i32* %5, align 4
  ret i32 %19
}

declare dso_local i32 @lstat(i8*, %struct.stat*) #1

declare dso_local i32 @mode_native_to_git(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
